--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link rel="icon" href="favicon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <!-- Noto Sans JP（本文・見出し）＋ Playfair Display（英字ラベル） -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;1,400&family=Noto+Sans+JP:wght@300;400;500&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="styles.css" />
   <script defer src="script.js"></script>
@@ -29,7 +28,7 @@
   </header>
 
   <main id="top">
-    <!-- HERO（左下配置・黒背景×白文字・白枠ボタン） -->
+    <!-- HERO -->
     <section class="hero">
       <img class="hero-bg" src="assets/hero.jpg" alt="FEELDO VILLA hero">
       <div class="hero-copy container">
@@ -44,7 +43,7 @@
       </div>
     </section>
 
-    <!-- CONCEPT（詩的改行＋画像位置55%） -->
+    <!-- CONCEPT -->
     <section id="concept" class="section">
       <div class="container two-col">
         <div class="col text">
@@ -69,7 +68,7 @@
       </div>
     </section>
 
-    <!-- VILLAS（3枚を16:9で統一） -->
+    <!-- VILLAS -->
     <section id="villas" class="section">
       <div class="container">
         <div class="eyebrow">Villas</div>
@@ -101,7 +100,7 @@
       </div>
     </section>
 
-    <!-- FEATURES（6枚・16:9統一・2列） -->
+    <!-- FEATURES -->
     <section id="features" class="section">
       <div class="container">
         <div class="eyebrow">Features</div>
@@ -147,14 +146,14 @@
             <figure class="ratio"><img src="assets/feature6.jpg" alt="立地"></figure>
             <div class="cap">
               <div class="en">Location</div>
-              <div class="jp">南軽井沢72ゴルフコース沿いのほぼ最後のエリア。インターから渋滞をせずにアクセスでき、風通しが良く空がとても広いエリアです。</div>
+              <div class="jp">南軽井沢72ゴルフコース沿いのほぼ最後のエリア。インターから渋滞をせずにアクセスでき、風通しが良く空がとても広い気持ちの良いエリアです。</div>
             </div>
           </article>
         </div>
       </div>
     </section>
 
-    <!-- GALLERY（8枚：01,02,04,05,06,07,08,10） -->
+    <!-- GALLERY -->
     <section id="gallery" class="section">
       <div class="container">
         <div class="eyebrow">Gallery</div>
@@ -173,7 +172,7 @@
       </div>
     </section>
 
-    <!-- RESERVE（改行付き会社情報） -->
+    <!-- RESERVE -->
     <section id="reserve" class="section">
       <div class="container">
         <div class="eyebrow">Reserve / Contact</div>
@@ -203,7 +202,7 @@
     </section>
   </main>
 
-  <!-- Footer（Instagram / SUUMO） -->
+  <!-- Footer -->
   <footer class="footer">
     <div class="container foot">
       <nav class="foot-links">
