--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
   <title>FEELDO VILLA | Minami-Karuizawa</title>
   <meta name="description" content="光と景色がひらける。心が晴れる。FEEL℃ VILLA KARUIZAWA ～景色と建築がとけあう軽井沢の邸～">
   <link rel="icon" href="favicon.png">
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;1,400&family=Noto+Sans+JP:wght@300;400;500&display=swap" rel="stylesheet" />
+
+  <!-- Fonts: Zen Old Mincho（本文/見出し） + Playfair Display（英字ラベルが必要な場合の補助） -->
+  <link rel="preconnect" href="https://fonts.googleapis.com"/>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+  <link href="https://fonts.googleapis.com/css2?family=Zen+Old+Mincho:wght@400;600;700&family=Playfair+Display:ital,wght@0,400;1,400&display=swap" rel="stylesheet"/>
+
   <link rel="stylesheet" href="styles.css" />
   <script defer src="script.js"></script>
 </head>
@@ -28,10 +31,11 @@
   </header>
 
   <main id="top">
-    <!-- HERO -->
+    <!-- HERO（左下配置・黒背景×白文字・白枠ボタン） -->
     <section class="hero">
       <img class="hero-bg" src="assets/hero.jpg" alt="FEELDO VILLA hero">
       <div class="hero-copy container">
+        <p class="hero-kicker">EXCLUSIVE VILLAS IN KARUIZAWA</p>
         <h1 class="hero-title">光と景色がひらける。心が晴れる。</h1>
         <p class="hero-lede">
           FEEL℃ VILLA KARUIZAWA<br>
@@ -43,7 +47,7 @@
       </div>
     </section>
 
-    <!-- CONCEPT -->
+    <!-- CONCEPT（詩的改行＋画像位置55%） -->
     <section id="concept" class="section">
       <div class="container two-col">
         <div class="col text">
@@ -68,7 +72,7 @@
       </div>
     </section>
 
-    <!-- VILLAS -->
+    <!-- VILLAS（3枚を16:9で統一） -->
     <section id="villas" class="section">
       <div class="container">
         <div class="eyebrow">Villas</div>
@@ -100,7 +104,7 @@
       </div>
     </section>
 
-    <!-- FEATURES -->
+    <!-- FEATURES（6枚・16:9統一・2列） -->
     <section id="features" class="section">
       <div class="container">
         <div class="eyebrow">Features</div>
@@ -146,14 +150,14 @@
             <figure class="ratio"><img src="assets/feature6.jpg" alt="立地"></figure>
             <div class="cap">
               <div class="en">Location</div>
-              <div class="jp">南軽井沢72ゴルフコース沿いのほぼ最後のエリア。インターから渋滞をせずにアクセスでき、風通しが良く空がとても広い気持ちの良いエリアです。</div>
+              <div class="jp">南軽井沢72ゴルフコース沿いのほぼ最後のエリア。インターから渋滞をせずにアクセスでき、風通しが良く空がとても広いエリアです。</div>
             </div>
           </article>
         </div>
       </div>
     </section>
 
-    <!-- GALLERY -->
+    <!-- GALLERY（8枚：01,02,04,05,06,07,08,10） -->
     <section id="gallery" class="section">
       <div class="container">
         <div class="eyebrow">Gallery</div>
@@ -172,7 +176,7 @@
       </div>
     </section>
 
-    <!-- RESERVE -->
+    <!-- RESERVE（改行付き会社情報） -->
     <section id="reserve" class="section">
       <div class="container">
         <div class="eyebrow">Reserve / Contact</div>
@@ -202,7 +206,7 @@
     </section>
   </main>
 
-  <!-- Footer -->
+  <!-- Footer（Instagram / SUUMO） -->
   <footer class="footer">
     <div class="container foot">
       <nav class="foot-links">
