--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="光と景色がひらける。心が晴れる。FEEL℃ VILLA KARUIZAWA ～景色と建築がとけあう軽井沢の邸～">
   <link rel="icon" href="favicon.png">
 
-  <!-- Fonts: Zen Old Mincho（本文/見出し） + Playfair Display（英字ラベルが必要な場合の補助） -->
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com"/>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
   <link href="https://fonts.googleapis.com/css2?family=Zen+Old+Mincho:wght@400;600;700&family=Playfair+Display:ital,wght@0,400;1,400&display=swap" rel="stylesheet"/>
@@ -31,7 +31,7 @@
   </header>
 
   <main id="top">
-    <!-- HERO（左下配置・黒背景×白文字・白枠ボタン） -->
+    <!-- HERO（黒背景・白文字・下寄せ左配置） -->
     <section class="hero">
       <img class="hero-bg" src="assets/hero.jpg" alt="FEELDO VILLA hero">
       <div class="hero-copy container">
@@ -47,32 +47,32 @@
       </div>
     </section>
 
-    <!-- CONCEPT（詩的改行＋画像位置55%） -->
+    <!-- CONCEPT -->
     <section id="concept" class="section">
       <div class="container two-col">
         <div class="col text">
           <div class="eyebrow">Concept</div>
-          <h2 class="hjp">コンセプト</h2>
+          <h2 class="hjp">こころをほどき　ときをあむ</h2>
           <div class="rule"></div>
           <p class="lead">
-            こころをほどき　ときをあむ<br>
             晴れた昼下がり、風に誘われ庭で遊ぶ<br>
             夜はテラスで星を仰ぐ<br>
             薪ストーブの炎が静かに夜をあたためる<br>
             都会とは異なる時間軸の中で<br>
             思索し、癒され、本来の自分に還る<br>
-            静かで上質な時が、思考と感性にそっと寄り添う
+            静かで上質な時が<br>
+            思考と感性にそっと寄り添う
           </p>
         </div>
         <div class="col media concept-media">
           <figure class="ratio">
-            <img src="assets/concept.jpg" alt="薪ストーブと自然が響き合う室内" class="concept-img">
+            <img loading="lazy" decoding="async" src="assets/concept.jpg" alt="薪ストーブと自然が響き合う室内" class="concept-img">
           </figure>
         </div>
       </div>
     </section>
 
-    <!-- VILLAS（3枚を16:9で統一） -->
+    <!-- VILLAS -->
     <section id="villas" class="section">
       <div class="container">
         <div class="eyebrow">Villas</div>
@@ -80,21 +80,21 @@
         <div class="rule"></div>
         <div class="grid-3">
           <article class="card">
-            <figure class="ratio"><img src="assets/villa_a.jpg" alt="A棟 外観"></figure>
+            <figure class="ratio"><img loading="lazy" decoding="async" src="assets/villa_a.jpg" alt="A棟 外観"></figure>
             <div class="cap">
               <div class="en">Villa A — Completed Sep 2025</div>
               <div class="jp">A棟 — 2025年9月竣工</div>
             </div>
           </article>
           <article class="card">
-            <figure class="ratio"><img src="assets/villa_b.jpg" alt="B棟 外観"></figure>
+            <figure class="ratio"><img loading="lazy" decoding="async" src="assets/villa_b.jpg" alt="B棟 外観"></figure>
             <div class="cap">
               <div class="en">Villa B — Completed Sep 2025</div>
               <div class="jp">B棟 — 2025年9月竣工</div>
             </div>
           </article>
           <article class="card">
-            <figure class="ratio"><img src="assets/villa_c.jpg" alt="C棟 ロケーション（空撮）"></figure>
+            <figure class="ratio"><img loading="lazy" decoding="async" src="assets/villa_c.jpg" alt="C棟 ロケーション（空撮）"></figure>
             <div class="cap">
               <div class="en">Villa C — Planned 2026</div>
               <div class="jp">C棟 — 2026年計画</div>
@@ -104,7 +104,7 @@
       </div>
     </section>
 
-    <!-- FEATURES（6枚・16:9統一・2列） -->
+    <!-- FEATURES -->
     <section id="features" class="section">
       <div class="container">
         <div class="eyebrow">Features</div>
@@ -112,42 +112,42 @@
         <div class="rule"></div>
         <div class="grid-2">
           <article class="feat card">
-            <figure class="ratio"><img src="assets/feature1.jpg" alt="芝庭と眺望"></figure>
+            <figure class="ratio"><img loading="lazy" decoding="async" src="assets/feature1.jpg" alt="芝庭と眺望"></figure>
             <div class="cap">
               <div class="en">Garden Lawn & Panorama</div>
               <div class="jp">大きな芝庭の先には小高い丘と大きな空が広がる軽井沢でも稀有な眺望を有します。</div>
             </div>
           </article>
           <article class="feat card">
-            <figure class="ratio"><img src="assets/feature2.jpg" alt="4LDK + 3台駐車"></figure>
+            <figure class="ratio"><img loading="lazy" decoding="async" src="assets/feature2.jpg" alt="4LDK + 3台駐車"></figure>
             <div class="cap">
               <div class="en">4BR + Parking for 3</div>
               <div class="jp">家族＋ゲスト、＋ご両親といったニーズにこたえる間取りとスペースをご用意しています。</div>
             </div>
           </article>
           <article class="feat card">
-            <figure class="ratio"><img src="assets/feature3.jpg" alt="ホテルライクな水回り"></figure>
+            <figure class="ratio"><img loading="lazy" decoding="async" src="assets/feature3.jpg" alt="ホテルライクな水回り"></figure>
             <div class="cap">
               <div class="en">Hotel-like Wet Areas</div>
               <div class="jp">家族みんなで使ったり、ベッドルーム専用となったり可変する水回りを2か所ご用意しています。</div>
             </div>
           </article>
           <article class="feat card">
-            <figure class="ratio"><img src="assets/feature4.jpg" alt="アクティビティを愉しむ"></figure>
+            <figure class="ratio"><img loading="lazy" decoding="async" src="assets/feature4.jpg" alt="アクティビティを愉しむ"></figure>
             <div class="cap">
               <div class="en">For Active Days</div>
               <div class="jp">外部収納や自転車も置ける広い玄関、庭のバーベキュースペースなど、軽井沢でのアクティビティを愉しむ工夫を施しています。</div>
             </div>
           </article>
           <article class="feat card">
-            <figure class="ratio"><img src="assets/feature5.jpg" alt="確かな施工監修"></figure>
+            <figure class="ratio"><img loading="lazy" decoding="async" src="assets/feature5.jpg" alt="確かな施工監修"></figure>
             <div class="cap">
               <div class="en">Trusted Construction Oversight</div>
               <div class="jp">設計者自身が土地の選定、設計から施工までを一貫監修し、品質を担保。</div>
             </div>
           </article>
           <article class="feat card">
-            <figure class="ratio"><img src="assets/feature6.jpg" alt="立地"></figure>
+            <figure class="ratio"><img loading="lazy" decoding="async" src="assets/feature6.jpg" alt="立地"></figure>
             <div class="cap">
               <div class="en">Location</div>
               <div class="jp">南軽井沢72ゴルフコース沿いのほぼ最後のエリア。インターから渋滞をせずにアクセスでき、風通しが良く空がとても広いエリアです。</div>
@@ -157,26 +157,26 @@
       </div>
     </section>
 
-    <!-- GALLERY（8枚：01,02,04,05,06,07,08,10） -->
+    <!-- GALLERY -->
     <section id="gallery" class="section">
       <div class="container">
         <div class="eyebrow">Gallery</div>
         <h2 class="hjp">ギャラリー</h2>
         <div class="rule"></div>
         <div class="grid-2">
-          <figure class="card ratio"><img src="assets/gallery01.jpg" alt=""></figure>
-          <figure class="card ratio"><img src="assets/gallery02.jpg" alt=""></figure>
-          <figure class="card ratio"><img src="assets/gallery04.jpg" alt=""></figure>
-          <figure class="card ratio"><img src="assets/gallery05.jpg" alt=""></figure>
-          <figure class="card ratio"><img src="assets/gallery06.jpg" alt=""></figure>
-          <figure class="card ratio"><img src="assets/gallery07.jpg" alt=""></figure>
-          <figure class="card ratio"><img src="assets/gallery08.jpg" alt=""></figure>
-          <figure class="card ratio"><img src="assets/gallery10.jpg" alt=""></figure>
+          <figure class="card ratio"><img loading="lazy" decoding="async" src="assets/gallery01.jpg" alt=""></figure>
+          <figure class="card ratio"><img loading="lazy" decoding="async" src="assets/gallery02.jpg" alt=""></figure>
+          <figure class="card ratio"><img loading="lazy" decoding="async" src="assets/gallery04.jpg" alt=""></figure>
+          <figure class="card ratio"><img loading="lazy" decoding="async" src="assets/gallery05.jpg" alt=""></figure>
+          <figure class="card ratio"><img loading="lazy" decoding="async" src="assets/gallery06.jpg" alt=""></figure>
+          <figure class="card ratio"><img loading="lazy" decoding="async" src="assets/gallery07.jpg" alt=""></figure>
+          <figure class="card ratio"><img loading="lazy" decoding="async" src="assets/gallery08.jpg" alt=""></figure>
+          <figure class="card ratio"><img loading="lazy" decoding="async" src="assets/gallery10.jpg" alt=""></figure>
         </div>
       </div>
     </section>
 
-    <!-- RESERVE（改行付き会社情報） -->
+    <!-- RESERVE -->
     <section id="reserve" class="section">
       <div class="container">
         <div class="eyebrow">Reserve / Contact</div>
@@ -206,7 +206,7 @@
     </section>
   </main>
 
-  <!-- Footer（Instagram / SUUMO） -->
+  <!-- Footer -->
   <footer class="footer">
     <div class="container foot">
       <nav class="foot-links">
