--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <img class="hero-bg" src="assets/hero.jpg" alt="FEELDO VILLA hero">
       <div class="hero-copy container">
         <p class="hero-kicker">EXCLUSIVE VILLAS IN KARUIZAWA</p>
-        <h1 class="hero-title">光と景色がひらける。心が晴れる。</h1>
+        <h1 class="hero-title">景色がひらける。心が晴れる。</h1>
         <p class="hero-lede">
           FEEL℃ VILLA KARUIZAWA<br>
           ～景色と建築がとけあう軽井沢の邸～
