--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>FEELDO VILLA | Minami-Karuizawa</title>
-  <meta name="description" content="光と景色がひらける。心が晴れる。FEEL℃ VILLA KARUIZAWA ～景色と建築がとけあう軽井沢の邸～">
+  <meta name="description" content="景色がひらける。心が晴れる。FEEL℃ VILLA KARUIZAWA ～景色と建築がとけあう軽井沢の邸～">
   <link rel="icon" href="favicon.png">
 
   <!-- Fonts -->
