--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>FEELDO VILLA | Minami-Karuizawa</title>
-  <meta name="description" content="景色がひらける。心が晴れる。FEEL℃ VILLA KARUIZAWA ～景色と建築がとけあう軽井沢の邸～">
+  <meta name="description" content="景色がひらける。心が晴れる。FEEL℃ VILLA KARUIZAWA ～光と建築がとけあう軽井沢の邸～">
   <link rel="icon" href="favicon.png">
 
   <!-- Fonts -->
@@ -39,7 +39,7 @@
         <h1 class="hero-title">景色がひらける。心が晴れる。</h1>
         <p class="hero-lede">
           FEEL℃ VILLA KARUIZAWA<br>
-          ～景色と建築がとけあう軽井沢の邸～
+          ～光と建築がとけあう軽井沢の邸～
         </p>
         <div class="hero-cta">
           <a class="btn-hero" href="#reserve">見学予約 / Mail to Reserve</a>
