--- a/index.html
+++ b/index.html
@@ -4,19 +4,17 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>FEELDO VILLA | Minami-Karuizawa</title>
-  <meta name="description" content="景色がひらける。心が晴れる。FEEL℃ VILLA KARUIZAWA ～光と建築がとけあう軽井沢の邸～">
+  <meta name="description" content="景色がひらける。心が晴れる。FEEL℃ VILLA KARUIZAWA 光と建築がとけあう軽井沢の邸">
   <link rel="icon" href="favicon.png">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com"/>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
   <link href="https://fonts.googleapis.com/css2?family=Zen+Old+Mincho:wght@400;600;700&family=Playfair+Display:ital,wght@0,400;1,400&display=swap" rel="stylesheet"/>
-
   <link rel="stylesheet" href="styles.css" />
   <script defer src="script.js"></script>
 </head>
 <body>
-  <!-- Header -->
   <header class="header">
     <div class="container nav">
       <a class="brand" href="#top">FEELDO VILLA</a>
@@ -31,7 +29,7 @@
   </header>
 
   <main id="top">
-    <!-- HERO（黒背景・白文字・下寄せ左配置） -->
+    <!-- HERO -->
     <section class="hero">
       <img class="hero-bg" src="assets/hero.jpg" alt="FEELDO VILLA hero">
       <div class="hero-copy container">
@@ -39,7 +37,7 @@
         <h1 class="hero-title">景色がひらける。心が晴れる。</h1>
         <p class="hero-lede">
           FEEL℃ VILLA KARUIZAWA<br>
-          ～光と建築がとけあう軽井沢の邸～
+          光と建築がとけあう軽井沢の邸
         </p>
         <div class="hero-cta">
           <a class="btn-hero" href="#reserve">見学予約 / Mail to Reserve</a>
@@ -72,38 +70,6 @@
       </div>
     </section>
 
-    <!-- VILLAS -->
-    <section id="villas" class="section">
-      <div class="container">
-        <div class="eyebrow">Villas</div>
-        <h2 class="hjp">邸宅</h2>
-        <div class="rule"></div>
-        <div class="grid-3">
-          <article class="card">
-            <figure class="ratio"><img loading="lazy" decoding="async" src="assets/villa_a.jpg" alt="A棟 外観"></figure>
-            <div class="cap">
-              <div class="en">Villa A — Completed Sep 2025</div>
-              <div class="jp">A棟 — 2025年9月竣工</div>
-            </div>
-          </article>
-          <article class="card">
-            <figure class="ratio"><img loading="lazy" decoding="async" src="assets/villa_b.jpg" alt="B棟 外観"></figure>
-            <div class="cap">
-              <div class="en">Villa B — Completed Sep 2025</div>
-              <div class="jp">B棟 — 2025年9月竣工</div>
-            </div>
-          </article>
-          <article class="card">
-            <figure class="ratio"><img loading="lazy" decoding="async" src="assets/villa_c.jpg" alt="C棟 ロケーション（空撮）"></figure>
-            <div class="cap">
-              <div class="en">Villa C — Planned 2026</div>
-              <div class="jp">C棟 — 2026年計画</div>
-            </div>
-          </article>
-        </div>
-      </div>
-    </section>
-
     <!-- FEATURES -->
     <section id="features" class="section">
       <div class="container">
@@ -114,43 +80,61 @@
           <article class="feat card">
             <figure class="ratio"><img loading="lazy" decoding="async" src="assets/feature1.jpg" alt="芝庭と眺望"></figure>
             <div class="cap">
-              <div class="en">Garden Lawn & Panorama</div>
-              <div class="jp">大きな芝庭の先には小高い丘と大きな空が広がる軽井沢でも稀有な眺望を有します。</div>
+              <div class="en">芝庭と眺望　ー　Garden Lawn & Panorama ー</div>
+              <div class="jp">
+                大きな芝庭の先には、小高い丘と大きな空が広がります。<br>
+                軽井沢でも貴重な、心までひらけるような開放的な眺望です。
+              </div>
             </div>
           </article>
           <article class="feat card">
-            <figure class="ratio"><img loading="lazy" decoding="async" src="assets/feature2.jpg" alt="4LDK + 3台駐車"></figure>
+            <figure class="ratio"><img loading="lazy" decoding="async" src="assets/feature2.jpg" alt="4LDK + 駐車3台"></figure>
             <div class="cap">
-              <div class="en">4BR + Parking for 3</div>
-              <div class="jp">家族＋ゲスト、＋ご両親といったニーズにこたえる間取りとスペースをご用意しています。</div>
+              <div class="en">4LDK + 駐車3台　ー　4BR + Parking for 3 ー</div>
+              <div class="jp">
+                ご家族に加え、ご両親やゲストを招いてのご利用にこたえる<br>
+                間取りとスペースをご用意しています。
+              </div>
             </div>
           </article>
           <article class="feat card">
             <figure class="ratio"><img loading="lazy" decoding="async" src="assets/feature3.jpg" alt="ホテルライクな水回り"></figure>
             <div class="cap">
-              <div class="en">Hotel-like Wet Areas</div>
-              <div class="jp">家族みんなで使ったり、ベッドルーム専用となったり可変する水回りを2か所ご用意しています。</div>
+              <div class="en">ホテルライクな水回り　ー　Hotel-like Wet Areas ー</div>
+              <div class="jp">
+                可動の間仕切りにより、水まわりをベッドルーム専用空間として独立させ、<br>
+                まるでホテルのようなプライベートな滞在を叶えます。
+              </div>
             </div>
           </article>
           <article class="feat card">
-            <figure class="ratio"><img loading="lazy" decoding="async" src="assets/feature4.jpg" alt="アクティビティを愉しむ"></figure>
+            <figure class="ratio"><img loading="lazy" decoding="async" src="assets/feature4.jpg" alt="アクティビティを愉しむ空間"></figure>
             <div class="cap">
-              <div class="en">For Active Days</div>
-              <div class="jp">外部収納や自転車も置ける広い玄関、庭のバーベキュースペースなど、軽井沢でのアクティビティを愉しむ工夫を施しています。</div>
+              <div class="en">アクティビティを愉しむ空間　ー　For Active Days ー</div>
+              <div class="jp">
+                自転車も置ける広い玄関や外部収納、庭のバーベキュースペースなど、<br>
+                軽井沢でのアクティビティを愉しむ工夫を随所に施しています。
+              </div>
             </div>
           </article>
           <article class="feat card">
             <figure class="ratio"><img loading="lazy" decoding="async" src="assets/feature5.jpg" alt="確かな施工監修"></figure>
             <div class="cap">
-              <div class="en">Trusted Construction Oversight</div>
-              <div class="jp">設計者自身が土地の選定、設計から施工までを一貫監修し、品質を担保。</div>
+              <div class="en">確かな施工監修　ー　Trusted Construction Oversight ー</div>
+              <div class="jp">
+                設計者自身が、土地の選定から設計・施工までを一貫して監修。<br>
+                細部にまで目を行き届かせ、唯一無二の品質を実現しています。
+              </div>
             </div>
           </article>
           <article class="feat card">
             <figure class="ratio"><img loading="lazy" decoding="async" src="assets/feature6.jpg" alt="立地"></figure>
             <div class="cap">
-              <div class="en">Location</div>
-              <div class="jp">南軽井沢72ゴルフコース沿いのほぼ最後のエリア。インターから渋滞をせずにアクセスでき、風通しが良く空がとても広いエリアです。</div>
+              <div class="en">立地　ー　Location ー</div>
+              <div class="jp">
+                南軽井沢・72ゴルフコース沿い。<br>
+                インターから渋滞なくアクセスできる、近年人気の高い希少なエリアです。
+              </div>
             </div>
           </article>
         </div>
@@ -176,7 +160,7 @@
       </div>
     </section>
 
-    <!-- RESERVE -->
+    <!-- RESERVE + OFFICIAL LINKS -->
     <section id="reserve" class="section">
       <div class="container">
         <div class="eyebrow">Reserve / Contact</div>
@@ -187,6 +171,7 @@
             見学予約は、土日・平日ともにご案内可能です。<br>
             ご希望日時をメールまたはお電話にてお知らせください。
           </p>
+
           <div class="contacts">
             <p>
               お問い合わせ<br>
@@ -196,7 +181,24 @@
               ✉️ <a href="mailto:info@feeldo.co.jp">info@feeldo.co.jp</a><br>
               🌐 <a href="https://feeldo.co.jp/" target="_blank">https://feeldo.co.jp/</a>
             </p>
+
+            <!-- 公式リンク群 -->
+            <div class="ext-links">
+              <a class="ext-link" target="_blank" rel="noopener" href="https://www.instagram.com/feeldo_official/">
+                <span class="icon ig" aria-hidden="true">📸</span>
+                <span class="label">Instagram ｜ その他の写真や動画はこちら</span>
+              </a>
+              <a class="ext-link" target="_blank" rel="noopener" href="https://suumo.jp/ikkodate/nagano/sc_kitasakugun/nc_78096645/">
+                <span class="icon suumo" aria-hidden="true">🟢</span>
+                <span class="label">SUUMO ｜ A棟の面積や価格などの詳細はこちら</span>
+              </a>
+              <a class="ext-link" target="_blank" rel="noopener" href="https://suumo.jp/ikkodate/nagano/sc_kitasakugun/nc_78142741/">
+                <span class="icon suumo" aria-hidden="true">🟢</span>
+                <span class="label">SUUMO ｜ B棟の面積や価格などの詳細はこちら</span>
+              </a>
+            </div>
           </div>
+
           <div class="reserve-actions">
             <a class="btn-primary" href="mailto:info@feeldo.co.jp?subject=FEELDO%20VILLA%20見学予約&body=ご希望日時：%0D%0Aお名前：%0D%0Aご連絡先：%0D%0Aご質問：">Mail to Reserve</a>
             <a class="btn-ghost" target="_blank" rel="noopener" href="https://maps.app.goo.gl/tqKMsfuVV3cmibBa7">📍 Google Mapsで見る</a>
@@ -206,16 +208,9 @@
     </section>
   </main>
 
-  <!-- Footer -->
+  <!-- FOOTER -->
   <footer class="footer">
     <div class="container foot">
-      <nav class="foot-links">
-        <a target="_blank" href="https://www.instagram.com/feeldo_official/">Instagram</a>
-        <span class="dot">•</span>
-        <a target="_blank" href="https://suumo.jp/ikkodate/nagano/sc_kitasakugun/nc_78096645/">SUUMO A棟</a>
-        <span class="dot">•</span>
-        <a target="_blank" href="https://suumo.jp/ikkodate/nagano/sc_kitasakugun/nc_78142741/">SUUMO B棟</a>
-      </nav>
       <small>© FEEL℃</small>
     </div>
   </footer>
