--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         <h2 class="hjp">特長</h2>
         <div class="rule"></div>
         <div class="grid-2">
+
           <article class="feat card">
             <figure class="ratio"><img loading="lazy" decoding="async" src="assets/feature1.jpg" alt="芝庭と眺望"></figure>
             <div class="cap">
@@ -87,6 +88,7 @@
               </div>
             </div>
           </article>
+
           <article class="feat card">
             <figure class="ratio"><img loading="lazy" decoding="async" src="assets/feature2.jpg" alt="4LDK + 駐車3台"></figure>
             <div class="cap">
@@ -97,6 +99,7 @@
               </div>
             </div>
           </article>
+
           <article class="feat card">
             <figure class="ratio"><img loading="lazy" decoding="async" src="assets/feature3.jpg" alt="ホテルライクな水回り"></figure>
             <div class="cap">
@@ -107,6 +110,7 @@
               </div>
             </div>
           </article>
+
           <article class="feat card">
             <figure class="ratio"><img loading="lazy" decoding="async" src="assets/feature4.jpg" alt="アクティビティを愉しむ空間"></figure>
             <div class="cap">
@@ -117,6 +121,7 @@
               </div>
             </div>
           </article>
+
           <article class="feat card">
             <figure class="ratio"><img loading="lazy" decoding="async" src="assets/feature5.jpg" alt="確かな施工監修"></figure>
             <div class="cap">
@@ -127,6 +132,7 @@
               </div>
             </div>
           </article>
+
           <article class="feat card">
             <figure class="ratio"><img loading="lazy" decoding="async" src="assets/feature6.jpg" alt="立地"></figure>
             <div class="cap">
@@ -137,6 +143,7 @@
               </div>
             </div>
           </article>
+
         </div>
       </div>
     </section>
@@ -182,20 +189,23 @@
               🌐 <a href="https://feeldo.co.jp/" target="_blank">https://feeldo.co.jp/</a>
             </p>
 
-            <!-- 公式リンク群 -->
+            <!-- 公式リンク群（■アイコン＋改行） -->
             <div class="ext-links">
-              <a class="ext-link" target="_blank" rel="noopener" href="https://www.instagram.com/feeldo_official/">
-                <span class="icon ig" aria-hidden="true">📸</span>
-                <span class="label">Instagram ｜ その他の写真や動画はこちら</span>
-              </a>
-              <a class="ext-link" target="_blank" rel="noopener" href="https://suumo.jp/ikkodate/nagano/sc_kitasakugun/nc_78096645/">
-                <span class="icon suumo" aria-hidden="true">🟢</span>
-                <span class="label">SUUMO ｜ A棟の面積や価格などの詳細はこちら</span>
-              </a>
-              <a class="ext-link" target="_blank" rel="noopener" href="https://suumo.jp/ikkodate/nagano/sc_kitasakugun/nc_78142741/">
-                <span class="icon suumo" aria-hidden="true">🟢</span>
-                <span class="label">SUUMO ｜ B棟の面積や価格などの詳細はこちら</span>
-              </a>
+              <p class="ext-link">
+                ■ <a target="_blank" rel="noopener" href="https://www.instagram.com/feeldo_official/">
+                  Instagram ｜ その他の写真や動画はこちら
+                </a>
+              </p>
+              <p class="ext-link">
+                ■ <a target="_blank" rel="noopener" href="https://suumo.jp/ikkodate/nagano/sc_kitasakugun/nc_78096645/">
+                  SUUMO ｜ A棟の面積や価格などの詳細はこちら
+                </a>
+              </p>
+              <p class="ext-link">
+                ■ <a target="_blank" rel="noopener" href="https://suumo.jp/ikkodate/nagano/sc_kitasakugun/nc_78142741/">
+                  SUUMO ｜ B棟の面積や価格などの詳細はこちら
+                </a>
+              </p>
             </div>
           </div>
 
