--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       </div>
     </section>
 
-    <!-- RESERVE + OFFICIAL LINKS -->
+    <!-- RESERVE -->
     <section id="reserve" class="section">
       <div class="container">
         <div class="eyebrow">Reserve / Contact</div>
@@ -189,23 +189,10 @@
               🌐 <a href="https://feeldo.co.jp/" target="_blank">https://feeldo.co.jp/</a>
             </p>
 
-            <!-- 公式リンク群（■アイコン＋改行） -->
             <div class="ext-links">
-              <p class="ext-link">
-                ■ <a target="_blank" rel="noopener" href="https://www.instagram.com/feeldo_official/">
-                  Instagram ｜ その他の写真や動画はこちら
-                </a>
-              </p>
-              <p class="ext-link">
-                ■ <a target="_blank" rel="noopener" href="https://suumo.jp/ikkodate/nagano/sc_kitasakugun/nc_78096645/">
-                  SUUMO ｜ A棟の面積や価格などの詳細はこちら
-                </a>
-              </p>
-              <p class="ext-link">
-                ■ <a target="_blank" rel="noopener" href="https://suumo.jp/ikkodate/nagano/sc_kitasakugun/nc_78142741/">
-                  SUUMO ｜ B棟の面積や価格などの詳細はこちら
-                </a>
-              </p>
+              <p class="ext-link">■ <a target="_blank" href="https://www.instagram.com/feeldo_official/">Instagram ｜ その他の写真や動画はこちら</a></p>
+              <p class="ext-link">■ <a target="_blank" href="https://suumo.jp/ikkodate/nagano/sc_kitasakugun/nc_78096645/">SUUMO ｜ A棟の面積や価格などの詳細はこちら</a></p>
+              <p class="ext-link">■ <a target="_blank" href="https://suumo.jp/ikkodate/nagano/sc_kitasakugun/nc_78142741/">SUUMO ｜ B棟の面積や価格などの詳細はこちら</a></p>
             </div>
           </div>
 
