--- a/index.html
+++ b/index.html
@@ -248,5 +248,10 @@
       <small>© FEEL℃</small>
     </div>
   </footer>
+  <p style="font-size:12px; color:#777; text-align:center; margin-top:40px;">
+本サイトでは、お客様からお預かりした個人情報を見学予約および物件のご案内のみに使用し、
+第三者に提供することはございません。<br>
+株式会社FEEL℃（Field）｜プライバシーポリシー
+</p>
 </body>
 </html>
