--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -27,7 +27,7 @@
 
   <h2>4. お問い合わせ窓口</h2>
   <p>株式会社FEEL℃<br>
-  Email：reserve@feeldo.co.jp</p>
+  Email：info@feeldo.co.jp</p>
 
   <p>最終更新日：2025年10月</p>
 </body>
