--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -14,7 +14,7 @@
 <body>
   <h1>プライバシーポリシー</h1>
 
-  <p>株式会社フィール℃（以下「当社」といいます。）は、お客様の個人情報を適切に取り扱うことを重要な責務と考えております。当社は以下の方針に基づき個人情報を管理いたします。</p>
+  <p>株式会社FEEL℃（以下「当社」といいます。）は、お客様の個人情報を適切に取り扱うことを重要な責務と考えております。当社は以下の方針に基づき個人情報を管理いたします。</p>
 
   <h2>1. 個人情報の利用目的</h2>
   <p>当社は、見学予約およびお問い合わせ対応のために個人情報を利用します。</p>
