--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   gtag('config', 'G-X7QQTP51L0');
 </script>
   
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="styles.css" />ｆ
   <script defer src="script.js"></script>
 </head>
 <body>
@@ -91,12 +91,12 @@
         <div class="rule"></div>
         <div class="grid-3">
           <article class="card">
-            <figure class="ratio"><img loading="lazy" decoding="async" src="assets/villa_a.jpg" alt="A棟 外観"></figure>
-            <div class="cap">
-              <div class="en">Villa A — Completed Sep 2025</div>
-              <div class="jp">A棟 — 2025年9月竣工</div>
-            </div>
-          </article>
+  <figure class="ratio"><img loading="lazy" decoding="async" src="assets/villa_a.jpg" alt="A棟 外観（ご成約済）"></figure>
+  <div class="cap">
+    <div class="en">Villa A — SOLD OUT</div>
+    <div class="jp">A棟 — ご成約済</div>
+  </div>
+</article>
           <article class="card">
             <figure class="ratio"><img loading="lazy" decoding="async" src="assets/villa_b.jpg" alt="B棟 外観"></figure>
             <div class="cap">
