--- a/index.html
+++ b/index.html
@@ -91,12 +91,15 @@
         <div class="rule"></div>
         <div class="grid-3">
           <article class="card">
-  <figure class="ratio"><img loading="lazy" decoding="async" src="assets/villa_a.jpg" alt="A棟 外観（ご成約済）"></figure>
-  <div class="cap">
-    <div class="en">Villa A — SOLD OUT</div>
-    <div class="jp">A棟 — ご成約済</div>
-  </div>
-</article>
+           <figure class="ratio">
+            <img loading="lazy" decoding="async" src="assets/villa_a.jpg" alt="A棟 外観">
+            <div class="sold-overlay">SOLD&nbsp;OUT</div>
+          </figure>
+          <div class="cap">
+           <div class="en">Villa A — Completed Sep 2025</div>
+           <div class="jp">A棟 — 2025年9月竣工</div>
+         </div>
+       </article>
           <article class="card">
             <figure class="ratio"><img loading="lazy" decoding="async" src="assets/villa_b.jpg" alt="B棟 外観"></figure>
             <div class="cap">
