--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Zen+Old+Mincho:wght@400;600;700&family=Playfair+Display:ital,wght@0,400;1,400&display=swap" rel="stylesheet"/>
 
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-X7QQTP51L0"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-X7QQTP51L0"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-  gtag('config', 'G-X7QQTP51L0');
-</script>
+    gtag('config', 'G-X7QQTP51L0');
+  </script>
   
-  <link rel="stylesheet" href="styles.css" />ｆ
+  <link rel="stylesheet" href="styles.css" />
   <script defer src="script.js"></script>
 </head>
 <body>
@@ -42,7 +42,7 @@
   </header>
 
   <main id="top">
-    <!-- HERO（黒背景・白文字・左下配置） -->
+    <!-- HERO -->
     <section class="hero">
       <img class="hero-bg" src="assets/hero.jpg" alt="FEEL℃ VILLA hero">
       <div class="hero-copy container">
@@ -58,7 +58,7 @@
       </div>
     </section>
 
-    <!-- CONCEPT（詩的改行／画像は縦30%拡大＋下方10%シフト） -->
+    <!-- CONCEPT -->
     <section id="concept" class="section">
       <div class="container two-col">
         <div class="col text">
@@ -90,25 +90,22 @@
         <h2 class="hjp">邸宅</h2>
         <div class="rule"></div>
         <div class="grid-3">
+          <!-- A棟は成約済みのためカードごと削除 -->
+
           <article class="card">
-           <figure class="ratio">
-            <img loading="lazy" decoding="async" src="assets/villa_a.jpg" alt="A棟 外観">
-            <div class="sold-overlay">SOLD&nbsp;OUT</div>
-          </figure>
-          <div class="cap">
-           <div class="en">Villa A — Completed Sep 2025</div>
-           <div class="jp">A棟 — 2025年9月竣工</div>
-         </div>
-       </article>
-          <article class="card">
-            <figure class="ratio"><img loading="lazy" decoding="async" src="assets/villa_b.jpg" alt="B棟 外観"></figure>
+            <figure class="ratio">
+              <img loading="lazy" decoding="async" src="assets/villa_b.jpg" alt="B棟 外観">
+            </figure>
             <div class="cap">
-              <div class="en">Villa B — Completed Sep 2025</div>
-              <div class="jp">B棟 — 2025年9月竣工</div>
+              <div class="en">Villa B — Completed Sep 2025 / Now on Sale</div>
+              <div class="jp">B棟 — 2025年9月竣工 ｜ 現在販売中の邸宅</div>
             </div>
           </article>
+
           <article class="card">
-            <figure class="ratio"><img loading="lazy" decoding="async" src="assets/villa_c.jpg" alt="C棟 ロケーション（空撮）"></figure>
+            <figure class="ratio">
+              <img loading="lazy" decoding="async" src="assets/villa_c.jpg" alt="C棟 ロケーション（空撮）">
+            </figure>
             <div class="cap">
               <div class="en">Villa C — Planned 2026</div>
               <div class="jp">C棟 — 2026年計画</div>
@@ -118,7 +115,7 @@
       </div>
     </section>
 
-    <!-- FEATURES（見出しは日英併記・本文差し替え済み） -->
+    <!-- FEATURES -->
     <section id="features" class="section">
       <div class="container">
         <div class="eyebrow">Features</div>
@@ -215,7 +212,7 @@
       </div>
     </section>
 
-    <!-- RESERVE（お問い合わせ＋■リンク＋地図座標URL） -->
+    <!-- RESERVE -->
     <section id="reserve" class="section">
       <div class="container">
         <div class="eyebrow">Reserve / Contact</div>
@@ -224,6 +221,7 @@
         <div class="reserve card-inline">
           <p class="lead">
             見学予約は、土日・平日ともにご案内可能です。<br>
+            現在販売中の物件は B棟のみとなります。<br>
             ご希望日時をメールまたはお電話にてお知らせください。
           </p>
 
@@ -239,64 +237,55 @@
 
             <!-- 公式リンク群（■アイコン＋縦並び） -->
             <div class="ext-links">
-             <p class="ext-link">■
-  <a target="_blank" rel="noopener"
-     href="https://www.instagram.com/feeldo_official/"
-     onclick="gtag('event','instagram_click',{
-       event_category:'outbound',
-       event_label:'Instagram FEELDO',
-       link_url:this.href
-     });">
-    Instagram ｜ その他の写真や動画はこちら
-  </a>
-</p>
-             <p class="ext-link">■
-  <a target="_blank" rel="noopener"
-     href="https://suumo.jp/ikkodate/nagano/sc_kitasakugun/nc_78096645/"
-     onclick="gtag('event','suumo_a_click',{
-       event_category:'outbound',
-       event_label:'SUUMO A',
-       link_url:this.href
-     });">
-    SUUMO ｜ A棟の面積や価格などの詳細はこちら
-  </a>
-</p>
-             <p class="ext-link">■
-  <a target="_blank" rel="noopener"
-     href="https://suumo.jp/ikkodate/nagano/sc_kitasakugun/nc_78142741/"
-     onclick="gtag('event','suumo_b_click',{
-       event_category:'outbound',
-       event_label:'SUUMO B',
-       link_url:this.href
-     });">
-    SUUMO ｜ B棟の面積や価格などの詳細はこちら
-  </a>
-</p>
+              <p class="ext-link">■
+                <a target="_blank" rel="noopener"
+                   href="https://suumo.jp/ikkodate/nagano/sc_kitasakugun/nc_78142741/"
+                   onclick="gtag('event','suumo_b_click',{
+                     event_category:'outbound',
+                     event_label:'SUUMO B',
+                     link_url:this.href
+                   });">
+                  SUUMO ｜ 【販売中】B棟の面積や価格などの詳細はこちら
+                </a>
+              </p>
+
+              <p class="ext-link">■
+                <a target="_blank" rel="noopener"
+                   href="https://www.instagram.com/feeldo_official/"
+                   onclick="gtag('event','instagram_click',{
+                     event_category:'outbound',
+                     event_label:'Instagram FEELDO',
+                     link_url:this.href
+                   });">
+                  Instagram ｜ その他の写真や動画はこちら
+                </a>
+              </p>
             </div>
           </div>
 
           <div class="reserve-actions">
             <a class="btn-primary"
-   href="mailto:info@feeldo.co.jp?subject=FEELDO%20VILLA%20見学予約&body=ご希望日時：%0D%0Aお名前：%0D%0Aご連絡先：%0D%0Aご質問："
-   onclick="gtag('event','email_click',{
-     event_category:'contact',
-     event_label:'Mail to Reserve',
-     email:'info@feeldo.co.jp',
-     link_url:this.href
-   });">
-  Mail to Reserve
-</a>
-            <!-- 正確な座標指定のGoogleマップURL -->
-           <a class="btn-ghost"
-   target="_blank" rel="noopener"
-   href="https://www.google.com/maps?q=36.307382167751115,138.6292358153694"
-   onclick="gtag('event','map_link_click',{
-     event_category:'outbound',
-     event_label:'Google Maps View',
-     link_url:this.href
-   });">
-  📍 Google Mapsで見る
-</a>
+               href="mailto:info@feeldo.co.jp?subject=FEELDO%20VILLA%20見学予約&body=ご希望日時：%0D%0Aお名前：%0D%0Aご連絡先：%0D%0Aご質問："
+               onclick="gtag('event','email_click',{
+                 event_category:'contact',
+                 event_label:'Mail to Reserve',
+                 email:'info@feeldo.co.jp',
+                 link_url:this.href
+               });">
+              Mail to Reserve
+            </a>
+
+            <a class="btn-ghost"
+               target="_blank" rel="noopener"
+               href="https://www.google.com/maps?q=36.307382167751115,138.6292358153694"
+               onclick="gtag('event','map_link_click',{
+                 event_category:'outbound',
+                 event_label:'Google Maps View',
+                 link_url:this.href
+               });">
+              📍 Google Mapsで見る
+            </a>
+          </div>
         </div>
       </div>
     </section>
@@ -308,10 +297,11 @@
       <small>© FEEL℃</small>
     </div>
   </footer>
+
   <p style="font-size:12px; color:#777; text-align:center; margin-top:40px;">
-本サイトでは、お客様からお預かりした個人情報を見学予約および物件のご案内のみに使用し、
-第三者に提供することはございません。<br>
-株式会社FEEL℃（Field）｜プライバシーポリシー
-</p>
+    本サイトでは、お客様からお預かりした個人情報を見学予約および物件のご案内のみに使用し、<br>
+    第三者に提供することはございません。<br>
+    株式会社FEEL℃（Field）｜プライバシーポリシー
+  </p>
 </body>
 </html>
