--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     gtag('config', 'G-X7QQTP51L0');
   </script>
-  
+
   <link rel="stylesheet" href="styles.css" />
   <script defer src="script.js"></script>
 </head>
@@ -90,18 +90,39 @@
         <h2 class="hjp">邸宅</h2>
         <div class="rule"></div>
         <div class="grid-3">
-          <!-- A棟は成約済みのためカードごと削除 -->
-
+          <!-- A棟：SOLD OUT のまま残す -->
           <article class="card">
             <figure class="ratio">
-              <img loading="lazy" decoding="async" src="assets/villa_b.jpg" alt="B棟 外観">
+              <img loading="lazy" decoding="async" src="assets/villa_a.jpg" alt="A棟 外観">
+              <div class="sold-overlay">SOLD&nbsp;OUT</div>
             </figure>
             <div class="cap">
-              <div class="en">Villa B — Completed Sep 2025 / Now on Sale</div>
-              <div class="jp">B棟 — 2025年9月竣工 ｜ 現在販売中の邸宅</div>
+              <div class="en">Villa A — Completed Sep 2025</div>
+              <div class="jp">A棟 — 2025年9月竣工（成約済）</div>
             </div>
           </article>
 
+          <!-- B棟：カード全体をクリックで suumoB に遷移 -->
+          <article class="card">
+            <a class="card-link"
+               target="_blank" rel="noopener"
+               href="https://suumo.jp/ikkodate/nagano/sc_kitasakugun/nc_78142741/"
+               onclick="gtag('event','suumo_b_click', {
+                 event_category: 'outbound',
+                 event_label: 'SUUMO B (Villas card)',
+                 link_url: this.href
+               });">
+              <figure class="ratio">
+                <img loading="lazy" decoding="async" src="assets/villa_b.jpg" alt="B棟 外観">
+              </figure>
+              <div class="cap">
+                <div class="en">Villa B — Completed Sep 2025 / Now on Sale</div>
+                <div class="jp">B棟 — 2025年9月竣工 ｜ 販売中</div>
+              </div>
+            </a>
+          </article>
+
+          <!-- C棟：そのまま -->
           <article class="card">
             <figure class="ratio">
               <img loading="lazy" decoding="async" src="assets/villa_c.jpg" alt="C棟 ロケーション（空撮）">
@@ -124,7 +145,9 @@
         <div class="grid-2">
 
           <article class="feat card">
-            <figure class="ratio"><img loading="lazy" decoding="async" src="assets/feature1.jpg" alt="芝庭と眺望"></figure>
+            <figure class="ratio">
+              <img loading="lazy" decoding="async" src="assets/feature1.jpg" alt="芝庭と眺望">
+            </figure>
             <div class="cap">
               <div class="en">芝庭と眺望　ー　Garden Lawn & Panorama ー</div>
               <div class="jp">
@@ -135,7 +158,9 @@
           </article>
 
           <article class="feat card">
-            <figure class="ratio"><img loading="lazy" decoding="async" src="assets/feature2.jpg" alt="4LDK + 駐車3台"></figure>
+            <figure class="ratio">
+              <img loading="lazy" decoding="async" src="assets/feature2.jpg" alt="4LDK + 駐車3台">
+            </figure>
             <div class="cap">
               <div class="en">4LDK + 駐車3台　ー　4BR + Parking for 3 ー</div>
               <div class="jp">
@@ -146,7 +171,9 @@
           </article>
 
           <article class="feat card">
-            <figure class="ratio"><img loading="lazy" decoding="async" src="assets/feature3.jpg" alt="ホテルライクな水回り"></figure>
+            <figure class="ratio">
+              <img loading="lazy" decoding="async" src="assets/feature3.jpg" alt="ホテルライクな水回り">
+            </figure>
             <div class="cap">
               <div class="en">ホテルライクな水回り　ー　Hotel-like Wet Areas ー</div>
               <div class="jp">
@@ -157,7 +184,9 @@
           </article>
 
           <article class="feat card">
-            <figure class="ratio"><img loading="lazy" decoding="async" src="assets/feature4.jpg" alt="アクティビティを愉しむ空間"></figure>
+            <figure class="ratio">
+              <img loading="lazy" decoding="async" src="assets/feature4.jpg" alt="アクティビティを愉しむ空間">
+            </figure>
             <div class="cap">
               <div class="en">アクティビティを愉しむ空間　ー　For Active Days ー</div>
               <div class="jp">
@@ -168,7 +197,9 @@
           </article>
 
           <article class="feat card">
-            <figure class="ratio"><img loading="lazy" decoding="async" src="assets/feature5.jpg" alt="確かな施工監修"></figure>
+            <figure class="ratio">
+              <img loading="lazy" decoding="async" src="assets/feature5.jpg" alt="確かな施工監修">
+            </figure>
             <div class="cap">
               <div class="en">確かな施工監修　ー　Trusted Construction Oversight ー</div>
               <div class="jp">
@@ -179,7 +210,9 @@
           </article>
 
           <article class="feat card">
-            <figure class="ratio"><img loading="lazy" decoding="async" src="assets/feature6.jpg" alt="立地"></figure>
+            <figure class="ratio">
+              <img loading="lazy" decoding="async" src="assets/feature6.jpg" alt="立地">
+            </figure>
             <div class="cap">
               <div class="en">立地　ー　Location ー</div>
               <div class="jp">
@@ -218,11 +251,14 @@
         <div class="eyebrow">Reserve / Contact</div>
         <h2 class="hjp">見学予約・お問い合わせ</h2>
         <div class="rule"></div>
+
         <div class="reserve card-inline">
           <p class="lead">
             見学予約は、土日・平日ともにご案内可能です。<br>
-            現在販売中の物件は B棟のみとなります。<br>
-            ご希望日時をメールまたはお電話にてお知らせください。
+            ご希望日時をメールまたはお電話にてお知らせください。<br>
+            <span style="font-size: 0.9em; color:#666;">
+              ※A棟は成約済みのため、現在はB棟のご案内となります。
+            </span>
           </p>
 
           <div class="contacts">
@@ -235,19 +271,22 @@
               🌐 <a href="https://feeldo.co.jp/" target="_blank">https://feeldo.co.jp/</a>
             </p>
 
-            <!-- 公式リンク群（■アイコン＋縦並び） -->
+            <!-- 公式リンク群 -->
             <div class="ext-links">
+              <!-- B棟 suumo を先頭に -->
               <p class="ext-link">■
                 <a target="_blank" rel="noopener"
                    href="https://suumo.jp/ikkodate/nagano/sc_kitasakugun/nc_78142741/"
                    onclick="gtag('event','suumo_b_click',{
                      event_category:'outbound',
-                     event_label:'SUUMO B',
+                     event_label:'SUUMO B (Reserve section)',
                      link_url:this.href
                    });">
                   SUUMO ｜ 【販売中】B棟の面積や価格などの詳細はこちら
                 </a>
               </p>
+
+              <!-- A棟 suumo リンクは削除 -->
 
               <p class="ext-link">■
                 <a target="_blank" rel="noopener"
